[ST] Use ThreadLocal in ResourceManager
Signed-off-by: David Kornel <kornys@outlook.com>