@@ -11,7 +11,6 @@ import org.hamcrest.Description;
 
 import java.util.Arrays;
 import java.util.List;
-import java.util.stream.Collectors;
 
 /**
  * <p>A HasAllOfReasons is custom matcher to check the partial matching of reasons for actual events.
@@ -30,11 +29,11 @@ public class HasAnyOfReasons extends BaseMatcher<List<Event>> {
     public boolean matches(Object actualValue) {
         List<String> actualReasons = ((List<Event>) actualValue).stream()
                 .map(Event::getReason)
-                .collect(Collectors.toList());
+                .toList();
 
         List<String> expectedReasons = Arrays.stream(eventReasons)
                 .map(Enum::name)
-                .collect(Collectors.toList());
+                .toList();
 
         for (String actualReason : actualReasons) {
             if (expectedReasons.contains(actualReason)) {
